WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201431
FrameLoader::FrameProgressTracker::progressCompleted() does not need a pageID
https://bugs.webkit.org/show_bug.cgi?id=201431
Summary
FrameLoader::FrameProgressTracker::progressCompleted() does not need a pageID
Chris Dumez
Reported
2019-09-03 11:09:10 PDT
FrameLoader::FrameProgressTracker::progressCompleted() does not need to request a pageID from the client. It can merely pass the Page object and the upper layers can very easily get the identifier of that page.
Attachments
Patch
(8.39 KB, patch)
2019-09-03 13:08 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-03 13:08:12 PDT
Created
attachment 377916
[details]
Patch
WebKit Commit Bot
Comment 2
2019-09-03 20:13:51 PDT
Comment on
attachment 377916
[details]
Patch Clearing flags on attachment: 377916 Committed
r249452
: <
https://trac.webkit.org/changeset/249452
>
WebKit Commit Bot
Comment 3
2019-09-03 20:13:53 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2019-09-03 20:14:19 PDT
<
rdar://problem/55003901
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug